# libESMTP

./: Makefile.in  config.h.in  configure  configure.ac  smtp-tls.c
crammd5/: Makefile.am  Makefile.in
login/: Makefile.am  Makefile.in
ntlm/: Makefile.in  ntlmdes.c
plain/: Makefile.am  Makefile.in
